# cache-locality-sim

./: .gitignore  CMakeLists.txt  LICENSE  README.md  all_changes.txt
.github/workflows/: cmake-single-platform.yml
include/: app.h  common.h  menu.h  particle_aos.h  particle_soa.h  results.h  simulation.h  ui.h
src/: app.c  main.c  menu.c  particle_aos.c  particle_soa.c  results.c  simulation.c  ui.c
